--- a/bin/main/templates/home/home_with_feed.html
+++ b/bin/main/templates/home/home_with_feed.html
@@ -2,24 +2,23 @@
 <html xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
-    <title>Home | Ruby on Rails Tutorial Sample App</title>
+    <title>Ruby on Rails Tutorial Sample App</title>
 </head>
 <body>
     <div th:fragment="content">
         <div class="row">
-            <div class="col-md-4">
-                <section>
-                    <div th:replace="~{fragments/user_info :: user_info}"></div>
+            <aside class="col-md-4">
+                <section class="user_info">
+                    <div th:replace="~{fragments/user_info :: user_info(user=${currentUser})}"></div>
                 </section>
-                <section>
-                    <div th:replace="~{fragments/stats :: stats}"></div>
+                <section class="stats">
+                    <div th:replace="~{fragments/stats :: stats(user=${currentUser})}"></div>
                 </section>
-                <section>
+                <section class="micropost_form">
                     <div th:replace="~{fragments/micropost_form :: micropost_form}"></div>
                 </section>
-            </div>
+            </aside>
             <div class="col-md-8">
-                <h3>Micropost Feed</h3>
                 <div th:replace="~{fragments/feed :: feed}"></div>
             </div>
         </div>
