--- a/src/main/resources/templates/users/index.html
+++ b/src/main/resources/templates/users/index.html
@@ -7,33 +7,52 @@
 <body>
     <div th:fragment="content">
         <h1>All users</h1>
-        
-        <nav aria-label="Page navigation">
-            <ul class="pagination justify-content-center" th:if="${users.totalPages > 1}">
-                <li class="page-item" th:classappend="${users.first ? 'disabled' : ''}">
-                    <a class="page-link" th:href="@{/users(page=${users.number - 1})}" tabindex="-1">Previous</a>
-                </li>
-                <li class="page-item" th:each="i : ${#numbers.sequence(0, users.totalPages - 1)}" 
-                    th:classappend="${i == users.number ? 'active' : ''}">
-                    <a class="page-link" th:href="@{/users(page=${i})}" th:text="${i + 1}"></a>
-                </li>
-                <li class="page-item" th:classappend="${users.last ? 'disabled' : ''}">
-                    <a class="page-link" th:href="@{/users(page=${users.number + 1})}">Next</a>
+        <div th:if="${users.totalElements > 0}">
+            <ul class="list-group">
+                <li class="list-group-item d-flex justify-content-between align-items-center" th:each="user : ${users.content}">
+                    <div>
+                        <img class="gravatar mr-2" th:src="@{'https://secure.gravatar.com/avatar/' + ${#strings.replace(user.email,'@','%40')} + '?s=50'}" alt="User avatar">
+                        <a th:href="@{/users/{id}(id=${user.id})}" th:text="${user.name}"></a>
+                    </div>
+                    <div sec:authorize="hasRole('ROLE_ADMIN')" th:if="${#authentication.principal.id != user.id}">
+                        <form th:action="@{/users/{id}(id=${user.id})}" th:method="delete" onsubmit="return confirm('Are you sure you want to delete this user?');">
+                            <button type="submit" class="btn btn-sm btn-danger">Delete</button>
+                        </form>
+                    </div>
                 </li>
             </ul>
-        </nav>
-        
-        <ul class="list-unstyled">
-            <li class="mb-3 d-flex align-items-center" th:each="user : ${users.content}">
-                <img class="gravatar me-3" th:src="@{'https://secure.gravatar.com/avatar/' + ${#strings.replace(user.email,'@','%40')} + '?s=50'}" alt="User avatar">
-                <div>
-                    <a th:href="@{/users/{id}(id=${user.id})}" th:text="${user.name}"></a>
-                    <form th:if="${user.id != #authentication.principal.id}" th:action="@{/users/{id}/delete(id=${user.id})}" method="post" class="d-inline">
-                        <button type="submit" class="btn btn-sm btn-danger ms-2" onclick="return confirm('Are you sure?')">Delete</button>
-                    </form>
-                </div>
-            </li>
-        </ul>
+            <div th:if="${users.totalPages > 1}" class="pagination justify-content-center mt-3">
+                <ul class="pagination">
+                    <li class="page-item" th:classappend="${users.first} ? 'disabled' : ''">
+                        <a class="page-link" th:href="@{/users(page=0)}" aria-label="First">
+                            <span aria-hidden="true">&laquo;&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item" th:classappend="${users.first} ? 'disabled' : ''">
+                        <a class="page-link" th:href="@{/users(page=${users.number - 1})}" aria-label="Previous">
+                            <span aria-hidden="true">&laquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item" th:each="i : ${#numbers.sequence(0, users.totalPages - 1)}" 
+                        th:classappend="${i == users.number} ? 'active' : ''">
+                        <a class="page-link" th:href="@{/users(page=${i})}" th:text="${i + 1}"></a>
+                    </li>
+                    <li class="page-item" th:classappend="${users.last} ? 'disabled' : ''">
+                        <a class="page-link" th:href="@{/users(page=${users.number + 1})}" aria-label="Next">
+                            <span aria-hidden="true">&raquo;</span>
+                        </a>
+                    </li>
+                    <li class="page-item" th:classappend="${users.last} ? 'disabled' : ''">
+                        <a class="page-link" th:href="@{/users(page=${users.totalPages - 1})}" aria-label="Last">
+                            <span aria-hidden="true">&raquo;&raquo;</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div th:unless="${users.totalElements > 0}" class="alert alert-info">
+            No users found.
+        </div>
     </div>
 </body>
 </html>
